# 2do-developer

./: .gitignore  AI_ARCHITECTURE_ANALYSIS.md  CLAUDE_CODE_IMPLEMENTATION.md  CURL_INSTALL_DEMO.md  ENHANCEMENT_RECOMMENDATIONS.md  ESCAPE_HANDLER_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL_TESTS.md  LARAVEL_DEVTOOLBOX_INTEGRATION.md  LICENSE  PERMISSION_GUIDE.md  README.md  SCHEDULER_GUIDE.md  TEST_SUITE.md  debug_working_dir.py  demo.py  demo_agent_collaboration.py  demo_complete_workflow.sh  demo_enhancements.py  demo_human_colleague.py  demo_opus_4.py  demo_output.txt  demo_scheduler.py  demo_superiority.py  fix_permissions.py  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py  test_curl_execution.sh  test_file.txt  test_file.txt.backup.1754657823  test_functionality.sh  test_install.sh  test_installation.py  test_mcp.txt  test_runner.py  todo.txt
2DO/: config.yaml  permission_sessions.json
\.2do/: pyvenv.cfg
ai_redirector/: ai_router.py  cli.py  config.py  image_handler.py  markdown_parser.py  multitasker.py  tech_stack.py  todo_manager.py
docs/: CLAUDE_AGENTS.md  CLAUDE_CODE_ENGINE.md  MCP_INTEGRATION.md
test_env/: pyvenv.cfg
tests/: test_basic.py  test_chat_help.py  test_cli_integration.py  test_comprehensive.py  test_config_fallback.py  test_dependencies.py  test_enhanced_progress.py  test_interactive_features.py  test_interactive_guidance.py  test_setup_verification.py  test_subtasks.py  test_urllib3_warning_fix.py
twodo/: __init__.py  agent_communicator.py  agent_heartbeat.py  agent_registry.py  ai_router.py  cli.py  (+20 more)
(+9 files in other folders)
