[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2do"
version = "0.1.0"
description = "2DO - Intelligent AI model routing and multitasking CLI tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "STAFE GROUP AB"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "rich>=13.0.0",
    "PyGithub>=2.0.0",
    "GitPython>=3.1.0",
    "playwright>=1.40.0",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
    "pyperclip>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/STAFE-GROUP-AB/2do-developer"
Repository = "https://github.com/STAFE-GROUP-AB/2do-developer"
Issues = "https://github.com/STAFE-GROUP-AB/2do-developer/issues"

[project.scripts]
"2do" = "twodo.cli:main"

[tool.setuptools.packages.find]
include = ["twodo*"]